# ghost_post

./: .gitignore  pyproject.toml
ghostpost/: settings.py  urls.py
ghostpost_app/: admin.py  forms.py  models.py  urls.py  views.py
ghostpost_app/migrations/: 0001_initial.py  0002_auto_20200623_2002.py  0003_auto_20200623_2013.py
ghostpost_app/templates/: boasts.html  form.html  index.html  roasts.html
